# site-41023242

./: README.md  pyproject.toml  server.py
config/: content.htm  content_backup.htm  sitetitle
content/: .html  6203RS Bearing_step.html  About.html  Ball bearing _ODC32-IDC12__step.html  Base clamp_step.html  Base_step.html  Bolt_1_step.html  Bolt_step.html  Bottom safety guard_step.html  Brython.html  Clamp_step.html  Column_step.html  Drill chuck _B16 0.5-13mm__step.html  Driven pulley_step.html  Feed handle axle_step.html  H1.html  HW.html  Knob axle_step.html  Motor tensioner clamp_step.html  Motor tensioner_step.html  NX.html  Onshape.html  Part 1_1_step.html  Part 1_step.html  Pulley_step.html  Rubber gasket_step.html  Rubber knob_step.html  Solvespace.html  Spindle guide_step.html  Spindle lock screw and nut_step.html  Spindle_step.html  Spline guider_step.html  Spring cap_step.html  Spring nut_step.html  W10.html  W11.html  W13.html  W6.html  index.html  sitemap.html  (+9 more)
downloads/: Desktop.7z  NX.7z  adadadadadad.7z  two-link.stl  w15.simscene.xml
